--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".activity.LinearLayoutManagerActivity"
+            android:label="@string/title_activity_linear_layout_manager" />
+        <activity android:name=".activity.GridLayoutManagerActivity"></activity>
     </application>
 
 </manifest>
